--- a/opd-records.html
+++ b/opd-records.html
@@ -246,6 +246,7 @@ window.printRec = async (r)=>{
 
 /* ---- Go ---- */
 (async function init(){ await loadAll(); render(); })();
+<script src="./scripts/theme-engine.js">
 </script>
 </body>
 </html>
