--- a/tv.html
+++ b/tv.html
@@ -34,9 +34,6 @@ body{margin:0;font:18px/1.45 ui-sans-serif, system-ui, -apple-system, Segoe UI, 
 .btn{background:#fff;border:1px solid #cbd5e1;border-radius:999px;padding:6px 12px;font-weight:700;cursor:pointer}
 .btn:hover{background:#f1f5f9}
 
-.banner{position:relative;overflow:hidden;border-radius:var(--r);margin:10px 0;background:var(--lav)}
-.banner img{width:100%;transform:scale(.70);display:block;border-radius:var(--r);mix-blend-mode:multiply;opacity:.95}
-
 .card{background:var(--card);border-radius:var(--r);padding:14px;box-shadow:var(--shadow);margin-top:12px}
 .subtitle{display:flex;justify-content:space-between;align-items:center;gap:10px}
 .subtitle h2{margin:0;font-size:22px}
@@ -66,6 +63,46 @@ body{margin:0;font:18px/1.45 ui-sans-serif, system-ui, -apple-system, Segoe UI, 
 .name{font-size:20px;font-weight:700}
 .note{font-size:14px;color:#64748b}
 .right{float:right}
+
+/* ===== Mascot (C) ===== */
+#mascotWrap{
+  position:fixed; right:18px; bottom:18px; z-index:9999; pointer-events:none;
+}
+#mascot{
+  width:120px; height:120px; border-radius:50%;
+  background:#111; color:#fff; display:grid; place-items:center;
+  font-weight:900; font-size:54px; user-select:none;
+  box-shadow:0 10px 24px rgba(0,0,0,.25), inset 0 -6px 0 rgba(255,255,255,.08);
+  border:3px solid #fff;
+  transform-origin:70% 70%;
+}
+#mascot.halo::after{
+  content:""; position:absolute; inset:-10px; border-radius:50%;
+  box-shadow:0 0 0 6px rgba(20,184,166,.18), 0 0 40px rgba(20,184,166,.35);
+}
+
+/* core anim helpers */
+@keyframes wiggle { 0%,100%{transform:rotate(0deg)} 25%{transform:rotate(6deg)} 75%{transform:rotate(-6deg)} }
+@keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-16px)} }
+@keyframes wave   { 0%,100%{transform:rotate(0deg)} 50%{transform:rotate(12deg)} }
+@keyframes spin   { from{transform:rotate(0deg)} to{transform:rotate(360deg)} }
+@keyframes pulse  { 0%,100%{box-shadow:0 0 0 0 rgba(16,185,129,.0)} 50%{box-shadow:0 0 0 18px rgba(16,185,129,.22)} }
+
+.act-wiggle{ animation: wiggle .9s ease-in-out 1; }
+.act-bounce{ animation: bounce .8s ease-in-out 1; }
+.act-wave{   animation: wave  1.1s ease-in-out 1; }
+.act-spin{   animation: spin  .8s linear 1; }
+.act-pulse{  animation: pulse 1.5s ease-out 1; }
+
+/* celebrate combo */
+.celebrate{ animation: bounce .8s ease-in-out 2, pulse 1.6s ease-out 1; }
+
+/* Mini overlay “card” to show demo status */
+.demoPill{
+  position:fixed; left:12px; bottom:12px; z-index:9998;
+  background:#111; color:#fff; padding:8px 12px; border-radius:999px;
+  font-weight:800; font-size:12px; letter-spacing:.4px; opacity:.75;
+}
 </style>
 </head>
 <body>
@@ -86,10 +123,7 @@ body{margin:0;font:18px/1.45 ui-sans-serif, system-ui, -apple-system, Segoe UI, 
     </div>
   </div>
 
-  <!-- Banner -->
-  <div class="banner">
-    <img id="banner" src="./assets/banner.png" alt="Clinic Banner">
-  </div>
+  <!-- Banner removed as requested -->
 
   <!-- Doctor & Queue -->
   <div class="card">
@@ -128,29 +162,22 @@ body{margin:0;font:18px/1.45 ui-sans-serif, system-ui, -apple-system, Segoe UI, 
   <div class="footer">© 2025 <strong>Powered by Onestop AI Services</strong> · All Rights Reserved</div>
 </div>
 
+<!-- Mascot -->
+<div id="mascotWrap"><div id="mascot" class="halo">C</div></div>
+<div id="demoPill" class="demoPill" style="display:none">DEMO MODE</div>
+
 <script>
 /*
-  TV Screen – Single Doctor View
-  --------------------------------
-  • booking-status.html writes:
+  TV Screen – Single Doctor View with Demo Mode & Mascot
+  ------------------------------------------------------
+  • bookings.html / opd-live.html should write:
       localStorage.setItem('tv_queue_payload', JSON.stringify({...}));
       localStorage.setItem('tv_queue_ping', Date.now().toString());
   • We listen for 'storage' on 'tv_queue_ping' and re-render.
-  • Payload format (example):
-    {
-      doctorId: "D001",
-      doctorName: "Dr. Arjun Singh",
-      date: "2025-10-24",
-      dept: "General Medicine",        // optional
-      items: [
-        { token: 1, name: "Ravi K", status: "IN_ROOM" },
-        { token: 2, name: "Meena",  status: "NEXT"    },
-        { token: 3, name: "Kiran",  status: "WAITING" },
-        { token: 4, name: "Lalith", status: "DONE"    }
-      ]
-    }
-  • TV is locked to a single doctor. If payload has different doctorId and you want to
-    hard-lock to one, set localStorage.tv_doctor_lock = "D00X". We’ll ignore others.
+  • Demo Mode:
+      - Enable with ?demo=1 OR localStorage.tv_demo="1"
+      - Simulates queue and token changes every 10s
+      - Shows "DEMO MODE" pill bottom-left
 */
 
 const $ = s => document.querySelector(s);
@@ -184,9 +211,36 @@ function applyBranding(){
   try{
     const ls = JSON.parse(localStorage.getItem('branding_json')||'null')||{};
     if(ls.logoUrl)   $('#logo').src = ls.logoUrl;
-    if(ls.bannerUrl) $('#banner').src = ls.bannerUrl;
     if(ls.clinicName) $('#clinicName').textContent = ls.clinicName;
     if(ls.clinicTag)  $('#clinicTag').textContent  = ls.clinicTag;
+
+    // Theme vars
+    const THEMES = {
+      pastel: {
+        "--bg-gradient":"linear-gradient(145deg,#edf3f0,#ece9f6,#fff0e6)",
+        "--card":"#ffffff","--ink":"#0f172a","--muted":"#475569","--primary":"#17B26A",
+        "--mint":"#C8E3D2","--lav":"#D7CEF0","--peach":"#FFD8B8"
+      },
+      glass: {
+        "--bg-gradient":"linear-gradient(135deg,#f8fafc,#eef2ff)",
+        "--card":"#ffffffcc","--ink":"#0f172a","--muted":"#475569","--primary":"#2563eb",
+        "--mint":"#e2e8f0","--lav":"#e9d5ff","--peach":"#ffedd5"
+      },
+      neo: {
+        "--bg-gradient":"linear-gradient(135deg,#f3f4f6,#fafafa)",
+        "--card":"#ffffff","--ink":"#111827","--muted":"#6b7280","--primary":"#10b981",
+        "--mint":"#d1fae5","--lav":"#ede9fe","--peach":"#ffe4e6"
+      },
+      iphone: {
+        "--bg-gradient":"linear-gradient(180deg,#fdf2f8,#eff6ff)",
+        "--card":"#ffffff","--ink":"#0f172a","--muted":"#475569","--primary":"#0ea5e9",
+        "--mint":"#e0f2fe","--lav":"#e9d5ff","--peach":"#ffe4e6"
+      }
+    };
+    const theme = THEMES[ls.theme || 'pastel'];
+    if(theme){
+      Object.entries(theme).forEach(([k,v])=> document.documentElement.style.setProperty(k, v));
+    }
   }catch{}
 }
 applyBranding();
@@ -197,8 +251,7 @@ function render(payload){
   // Optional hard lock to a doctor id
   const lock = localStorage.getItem('tv_doctor_lock') || '';
   if(lock && payload.doctorId && payload.doctorId !== lock) {
-    // Ignore updates for other doctors
-    return;
+    return; // ignore other doctors
   }
 
   // Header section
@@ -207,13 +260,15 @@ function render(payload){
   $('#forDate').textContent = payload.date || new Date().toISOString().slice(0,10);
 
   const list = Array.isArray(payload.items)? payload.items.slice(): [];
-  // Sort by: IN_ROOM first, then NEXT, then token asc, waiting, then done
-  const rank = s => ({IN_ROOM:0,NEXT:1,WAITING:2,DONE:9,COMPLETED:9,SKIPPED:8})[(s||'').toUpperCase()] ?? 3;
+  // Sort by: IN_ROOM first, NEXT, WAITING, then DONE (token asc within groups)
+  const rank = s => ({IN_ROOM:0,NEXT:1,WAITING:2,SKIPPED:8,DONE:9,COMPLETED:9})[(s||'').toUpperCase()] ?? 3;
   list.sort((a,b)=> (rank(a.status)-rank(b.status)) || (Number(a.token||0)-Number(b.token||0)));
 
   // Now & Next
   const now = list.find(x => String(x.status||'').toUpperCase().includes('ROOM'));
   const nxt = list.find(x => String(x.status||'').toUpperCase()==='NEXT') || list.find(x => String(x.status||'').toUpperCase()==='WAITING');
+  const prevNow = $('#nowToken').textContent;
+
   $('#nowToken').textContent = now ? (now.token ?? '—') : '—';
   $('#nowName').textContent  = now ? (now.name  ?? '') : '';
   $('#nextToken').textContent = nxt ? (nxt.token ?? '—') : '—';
@@ -232,6 +287,11 @@ function render(payload){
 
   // Persist last good payload for reload safety
   try{ localStorage.setItem('tv_queue_last', JSON.stringify(payload)); }catch{}
+
+  // If token changed, celebrate!
+  if(now && String(prevNow) !== String(now.token)){
+    triggerCelebrate();
+  }
 }
 
 function clearUI(){
@@ -258,7 +318,7 @@ function readIncoming(){
   render(p);
 }
 
-// React to pings from booking-status
+// React to pings from booking-status/opd-live
 window.addEventListener('storage', (e)=>{
   if(e.key==='tv_queue_ping'){
     readIncoming();
@@ -277,58 +337,137 @@ document.addEventListener('DOMContentLoaded', ()=>{
   // Show today
   const iso = new Date().toISOString().slice(0,10);
   document.getElementById('forDate').textContent = iso;
-
   readIncoming();
+  setupMascot();
+  setupDemoToggleFromURL();
+  maybeStartDemo();
 });
-</script>
 
-<!-- Pass1 theme + branding hook (non-invasive) -->
-<script>
-(function(){
-  function readBrand(){
-    try { return JSON.parse(localStorage.getItem('branding_json')||'null') || null; } catch(e){ return null; }
+/* ===================== Mascot (always on, silent comedy) ===================== */
+let _rndTimer = null;
+function setupMascot(){
+  const m = $('#mascot');
+  if(!m) return;
+
+  // Do a random action every ~20s
+  if(_rndTimer) clearInterval(_rndTimer);
+  _rndTimer = setInterval(()=> randomAct(), 20000);
+
+  // First greet
+  setTimeout(()=>{ addAct('act-bounce'); }, 800);
+}
+function addAct(cls, dur=1200){
+  const m = $('#mascot'); if(!m) return;
+  m.classList.remove('act-wiggle','act-bounce','act-wave','act-spin','act-pulse','celebrate');
+  void m.offsetWidth; // reflow to restart animation
+  m.classList.add(cls);
+  setTimeout(()=> m.classList.remove(cls), dur);
+}
+function randomAct(){
+  const acts = ['act-wiggle','act-bounce','act-wave','act-spin','act-pulse'];
+  const pick = acts[Math.floor(Math.random()*acts.length)];
+  addAct(pick, pick==='act-pulse' ? 1500 : 1000);
+}
+function triggerCelebrate(){
+  const m = $('#mascot'); if(!m) return;
+  m.classList.remove('celebrate'); void m.offsetWidth;
+  m.classList.add('celebrate');
+  setTimeout(()=> m.classList.remove('celebrate'), 1700);
+}
+
+/* ===================== Demo Mode (toggle) ===================== */
+function getParam(name){
+  const url = new URL(location.href);
+  return url.searchParams.get(name);
+}
+function setupDemoToggleFromURL(){
+  const q = getParam('demo');
+  if(q==='1'){ localStorage.setItem('tv_demo','1'); }
+  if(q==='0'){ localStorage.removeItem('tv_demo'); }
+}
+function isDemo(){ return localStorage.getItem('tv_demo')==='1'; }
+
+let _demoTick = null;
+function maybeStartDemo(){
+  const pill = $('#demoPill');
+  if(isDemo()){
+    pill.style.display='inline-block';
+    startDemo();
+  }else{
+    pill.style.display='none';
+    stopDemo();
   }
-  const b = readBrand(); if(!b) return;
-  const root = document.documentElement;
-  const THEMES = {
-    pastel: {
-      "--bg-gradient":"linear-gradient(145deg,#edf3f0,#ece9f6,#fff0e6)",
-      "--card":"#ffffff","--ink":"#0f172a","--muted":"#475569","--primary":"#17B26A",
-      "--mint":"#C8E3D2","--lav":"#D7CEF0","--peach":"#FFD8B8"
-    },
-    glass: {
-      "--bg-gradient":"linear-gradient(135deg,#f8fafc,#eef2ff)",
-      "--card":"#ffffffcc","--ink":"#0f172a","--muted":"#475569","--primary":"#2563eb",
-      "--mint":"#e2e8f0","--lav":"#e9d5ff","--peach":"#ffedd5"
-    },
-    neo: {
-      "--bg-gradient":"linear-gradient(135deg,#f3f4f6,#fafafa)",
-      "--card":"#ffffff","--ink":"#111827","--muted":"#6b7280","--primary":"#10b981",
-      "--mint":"#d1fae5","--lav":"#ede9fe","--peach":"#ffe4e6"
-    },
-    iphone: {
-      "--bg-gradient":"linear-gradient(180deg,#fdf2f8,#eff6ff)",
-      "--card":"#ffffff","--ink":"#0f172a","--muted":"#475569","--primary":"#0ea5e9",
-      "--mint":"#e0f2fe","--lav":"#e9d5ff","--peach":"#ffe4e6"
+}
+function stopDemo(){
+  if(_demoTick) clearInterval(_demoTick);
+  _demoTick = null;
+}
+function startDemo(){
+  // Seed fake payload
+  let tokenBase = 1;
+  let items = Array.from({length:10}).map((_,i)=>({
+    token: tokenBase+i,
+    name: ['Ravi','Meena','Kiran','Lalith','Asha','John','Bala','Ritu','Naveen','Fatima'][i],
+    status: i===0 ? 'IN_ROOM' : (i===1 ? 'NEXT' : 'WAITING')
+  }));
+
+  function push(){
+    const payload = {
+      doctorId: "D001",
+      doctorName: "Dr. A. Kumar",
+      dept: "General Medicine",
+      date: new Date().toISOString().slice(0,10),
+      items
+    };
+    try{
+      localStorage.setItem('tv_queue_payload', JSON.stringify(payload));
+      localStorage.setItem('tv_queue_ping', Date.now().toString());
+    }catch{}
+    render(payload);
+  }
+
+  // First draw
+  push();
+
+  // Every 5s: advance token & celebrate
+  if(_demoTick) clearInterval(_demoTick);
+  _demoTick = setInterval(()=>{
+    // Mark current in-room as done, next becomes in-room, next waiting becomes next, shift list
+    const curIdx = items.findIndex(r => String(r.status).toUpperCase().includes('ROOM'));
+    if(curIdx>=0){ items[curIdx].status = 'DONE'; }
+
+    const nxtIdx = items.findIndex(r => String(r.status).toUpperCase()==='NEXT');
+    if(nxtIdx>=0){ items[nxtIdx].status = 'IN_ROOM'; }
+
+    const waitIdx = items.findIndex(r => String(r.status).toUpperCase()==='WAITING');
+    if(waitIdx>=0){ items[waitIdx].status = 'NEXT'; }
+
+    // Add one fresh waiting at the end
+    const maxTok = Math.max(...items.map(r=>r.token));
+    const newName = 'Guest '+(maxTok+1);
+    items.push({ token: maxTok+1, name: newName, status:'WAITING' });
+
+    // Keep list manageable (drop earliest DONE if > 14 rows)
+    if(items.length>14){
+      const d = items.findIndex(r=>r.status==='DONE');
+      if(d>=0) items.splice(d,1);
     }
-  };
-  const theme = THEMES[b.theme || 'pastel'];
-  if(theme){
-    Object.entries(theme).forEach(([k,v])=> root.style.setProperty(k, v));
+
+    push(); // this will also trigger mascot celebrate via render()
+  }, 10000);
+
+  // Also keep mascot doing silly stuff independently
+  randomAct();
+}
+
+// Toggle demo quickly with keyboard: D to flip
+document.addEventListener('keydown', (e)=>{
+  if(e.key.toLowerCase()==='d'){
+    if(isDemo()) localStorage.removeItem('tv_demo');
+    else localStorage.setItem('tv_demo','1');
+    maybeStartDemo();
   }
-  // Swap logos and banners wherever present
-  const logoUrl = b.logoUrl || "";
-  const banUrl  = b.bannerUrl || "";
-  if(logoUrl){
-    document.querySelectorAll('img#logo, img#ph_logo, img.logo').forEach(el=> el.src = logoUrl);
-  }
-  if(banUrl){
-    document.querySelectorAll('#hdrBanner, .banner img, img[alt*="Banner"]').forEach(el=> el.src = banUrl);
-  }
-  // Titles
-  if(b.clinicName) { const el=document.getElementById('clinicTitle'); if(el) el.textContent=b.clinicName; }
-  if(b.pharmacyName){ const el=document.getElementById('ph_name'); if(el) el.textContent=b.pharmacyName; }
-})();
+});
 </script>
 </body>
 </html>
